# taskbar-manager-webview2

./: .clang-format  .clang-tidy  .gitignore  BuildInstaller.ps1  BuildInstallerWithWebView2FixedVersionRuntime.ps1  CMakeLists.txt  README.md  buildAndPack.ps1  buildAndPackWithWebView2FixedVersionRuntime.ps1  index.html  main.cpp
.zed/: debug.json
include/: Application.h  Constants.h  GlobalHotKeyManager.h  HttpServer.h  TrayManager.h  Utils.h  WebViewController.h  WindowManager.h
nsis/: .gitignore  License.rtf  build-strlen.ps1  build.ps1  index.html  installer.nsi
nsis/languages/: English.nsh  SimpChinese.nsh
nsis/licenses/: License-English.txt  License-SimpChinese.txt
resource/: WindowsProject.rc.in  application.manifest  bridge.js  index.html
script/: .gitignore  Build.README.md  Build.ps1  BuildAndPack.ps1  BuildAndPackWithWebView2Runtime.ps1  BuildInstaller.ps1  BuildInstallerWithWebView2Runtime.ps1
src/: Application.cpp  GlobalHotKeyManager.cpp  HotKeyManager.cpp  HttpServer.cpp  TrayManager.cpp  Utils.cpp  WebViewController.cpp  WindowManager.cpp
